Aligning chart/slider and fixing selection issues

--- a/forSlider/iThing.css
+++ b/forSlider/iThing.css
@@ -5,7 +5,7 @@
  */
 
 .ui-rangeSlider{
-  height: 30px;
+  height: 5200px;
   padding-top: 40px;
 }
 
